--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "app-track_aLIC"]
 	path = app-track_aLIC
-	url = git@github.umn.edu:HarelLab/app-track_aLIC.git
+	url = git@github.com:harellab/app-track_aLIC.git
 	ignore = dirty
